Supposedly fixed the linear gradiant bug(it not covering the entire background image). Added a media query for mobile for the profile image, now it won't look too big for mobile users. Put the div boxes to sleep, preparing to work with them later.

--- a/CSS/desktop.css
+++ b/CSS/desktop.css
@@ -1,5 +1,5 @@
 .darkening-div--img1 {
-    height: 35vh;
+    height: 35.1vh;
     width: 100%;
     
     background: linear-gradient(transparent,rgb(24, 25, 26));
@@ -39,12 +39,31 @@
     top: 10vh;
     margin: auto;
     z-index: 15;
-    display: flex;
+    display: grid;
+    gap: 0.1rem;
 }
 
 .child-box {
-    margin: 20px;
-    height: 230px;
-    width: 500px;
+    height: 39vh;
+    width: 35vw;
     background-color: black;
+    margin: auto;
+}
+
+.child-box-1{
+grid-column:1/2;
+grid-row:1/2;
+}
+.child-box-2{
+grid-column:2/3;
+grid-row:1/2;
+}
+
+.child-box-3{
+grid-column:1/2;
+grid-row:2/3;
+}
+.child-box-4{
+grid-column:2/2;
+grid-row:2/3;
 }
